--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 .center {
+  flex-direction: column;
   justify-content: center;
   display: flex;
 }
@@ -10,6 +11,7 @@
   grid-template-columns: repeat(3, 120px);
   grid-template-rows: repeat(3, 120px);
   gap: 0;
+  justify-content: center;
 }
 
 .grid-item {
@@ -25,5 +27,41 @@
 
 header {
   text-align: center;
+  padding: 10px;
+}
+
+.winner {
+  opacity: 1;
+  text-align: center;
+  padding: 10px 0;
+}
+
+.center {
+  border: 1px solid black;
+}
+
+.players {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+
+.player1,
+.player2 {
   padding: 15px 0;
+}
+
+.player1 {
+  padding-right: 25px;
+}
+
+.player2 {
+  padding-left: 25px;
+}
+
+.player1-name,
+.player1-type,
+.player2-name,
+.player2-type {
+  padding: 5px;
 }
