--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
   display: flex;
 }
 .grid-container {
-  border: 1px solid black;
   display: grid;
   row-gap: 20px;
   column-gap: 20px;
@@ -28,16 +27,13 @@
 header {
   text-align: center;
   padding: 10px;
+  margin-top: 10px;
 }
 
 .winner {
-  opacity: 1;
+  opacity: 0;
   text-align: center;
   padding: 10px 0;
-}
-
-.center {
-  border: 1px solid black;
 }
 
 .players {
