--- a/styles.css
+++ b/styles.css
@@ -61,3 +61,101 @@ header {
 .player2-type {
   padding: 5px;
 }
+
+input[type="text"] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 5px 0 2px 0;
+  display: inline-block;
+  /* border: 1px solid #ccc; */
+  box-sizing: border-box;
+}
+
+button {
+  background-color: #4caf50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px none;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+.cancel {
+  background-color: #f44336;
+  margin: 5px auto;
+  border-radius: 10px;
+}
+
+.submit {
+  margin: 5px auto;
+  border-radius: 10px;
+}
+
+.read {
+  margin: 2px 0 10px 0;
+}
+
+.model-content {
+  padding: 18px;
+  background-color: #fefefe;
+  margin: 5% auto 15% auto;
+  border: 1px solid #888;
+  width: 65%;
+  border-radius: 15px;
+}
+
+.modal {
+  display: block;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  padding-top: 60px;
+}
+
+small {
+  padding: 10px;
+}
+
+button.remove {
+  background-color: #f44336;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px none;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  position: absolute;
+  bottom: 0px;
+  left: 0;
+  font-size: 0.8rem;
+  padding: 5px;
+  border-radius: 15px;
+}
+
+small {
+  font-size: 0.6rem;
+  color: red;
+}
+
+.error {
+  border: 2px solid red;
+}
+
+.success {
+  border: 2px solid green;
+}
+
+.form-field {
+  margin: 12px;
+}
