--- a/styles.css
+++ b/styles.css
@@ -30,12 +30,6 @@ header {
   margin-top: 10px;
 }
 
-.winner {
-  opacity: 0;
-  text-align: center;
-  padding: 10px 0;
-}
-
 .players {
   display: flex;
   text-align: center;
@@ -91,7 +85,8 @@ button:hover {
   border-radius: 10px;
 }
 
-.submit {
+.submit,
+.again {
   margin: 5px auto;
   border-radius: 10px;
 }
@@ -158,4 +153,23 @@ small {
 
 .form-field {
   margin: 12px;
+}
+
+.form-field-again {
+  margin: 12px;
+  text-align: center;
+}
+
+.modal-again {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  padding-top: 60px;
 }
